Updating for Java 11
Also continuing updates to take advantage of the newer
Java version we build against, fix typos in documentation, and
switch to explicit API annotations to indicate project entry
points.